# Learning-OpenGL

./: CMakeLists.txt  README
include/: Config.h  Shader.h
resource/shader/hello_world/: fragment1.fs  fragment2.fs  vertex.vs
src/glad/: glad.c
src/hello_world/: main.cpp
