cmake_minimum_required(VERSION 2.8)
project(LearningOpenGL)
set(CMAKE_CXX_STANDARD 11)
set(BASIC_INCLUDE include src/glad/glad.c)
LINK_LIBRARIES(GL)
LINK_LIBRARIES(GLU)
LINK_LIBRARIES(glfw3)
LINK_LIBRARIES(X11)
LINK_LIBRARIES(Xxf86vm)
LINK_LIBRARIES(Xrandr)
LINK_LIBRARIES(pthread)
LINK_LIBRARIES(Xi)
LINK_LIBRARIES(dl)
LINK_LIBRARIES(Xinerama)
LINK_LIBRARIES(Xcursor)
LINK_LIBRARIES(assimp)
set(EXECUTABLE_OUTPUT_PATH bin)
add_executable(hello_world ${BASIC_INCLUDE} src/hello_world/main.cpp)